Invert DoorTypeManager - LocalizationManager control
- Before, the LocalizationManager depended on the DoorTypeManager. The LocalizationManager would query all door types from its manager so it could parse the localization stuff. However, the DoorTypeManager would not have loaded the door types yet. Because the LocalizationManager had a higher priority than the DoorTypeManager, the DoorTypes would never be loaded for the LocalizationManager to be parsed. Inverting the control allows the DoorTypeManager to inform the LocalizationManager about any newly-loaded DoorTypes. This means all DoorTypes are parsed by the LocalizationManager.